update about page

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="aboutus.css">
 </head>
 
 <body>
@@ -12,6 +13,24 @@
         <header>
             <iframe class="auto-height-iframe" src="partials/navigation.html" width="100%"></iframe>
         </header>
+        <main>
+            <div class="about-greeting">
+                <h1>Welcome to Tail Waggers - Where Every Pet is Family!</h1>
+            </div>
+            <div class="content-container">
+                <div class="about-container">
+                    <h2>Our Story</h2>
+                    <p>At Tail Waggers, our journey began with a simple love for animals. Founded in 2023, we set out to
+                        create more than just a pet shop; we aimed to build a community for pet lovers. Our founder, a
+                        lifelong animal enthusiast, envisioned a place where pets and their owners could find not only
+                        quality products but also support, advice, and a shared sense of joy.</p>
+                </div>
+                <div class="image-container">
+                    <img src="images/dog_and_friend.jpeg" alt="our shop">
+                </div>
+            </div>
+        </main>
+
 </body>
 
 </html>
