update blog page

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
+    <link rel="stylesheet" href="blog.css">
 </head>
 
 <body>
@@ -21,6 +22,34 @@
                 <h2>Tips for a Happier, Healthier Pet</h2>
                 <p>Discover the secrets to boosting your pet's mood and well-being with our top tips.
                 </p>
+                <a href="https://blogpaws.com/">Read More</a>
+            </article>
+        </section>
+        <section class="blog-cards-container">
+            <article class="blog-card">
+                <img src="images/woman_with_bernese.jpeg" alt="woman with Bernese Mountain dog">
+                <h3>Oh My Dog</h3>
+                <p>This site is written by a pet blogger that just loves dogs. The articles are fun to read and the site
+                    includes some reviews as well, making it a one stop blog for dog owners around the country.
+                </p>
+                <a href="https://ohmydogblog.com/">Read More</a>
+            </article>
+            <article class="blog-card">
+                <img src="images/child_with_cat.webp" alt="child with a cat">
+                <h3>Pawsitively Pets</h3>
+                <p>A great fun site discussing everything you need to know about pets, including some exotic ones.
+                    Curated by a Veterinary Technician, the blog posts some informative articles even about pet health.
+                </p>
+                <a href="https://www.mypawsitivelypets.com/">Read More</a>
+            </article>
+            <article class="blog-card">
+                <img src="images/corgi.jpeg" alt="corgi running">
+                <h3>Pressplay Pets</h3>
+                <p>This blog has a great design that helps you to navigate around the site easily. Packed full of
+                    helpful information and real life stories about some amazing pets, this blog is the perfect sharing
+                    platform.
+                </p>
+                <a href="https://www.mypawsitivelypets.com/">Read More</a>
             </article>
         </section>
     </main>
