update website blog

--- a/blog.html
+++ b/blog.html
@@ -25,34 +25,69 @@
                 <a href="https://blogpaws.com/">Read More</a>
             </article>
         </section>
-        <section class="blog-cards-container">
-            <article class="blog-card">
-                <img src="images/woman_with_bernese.jpeg" alt="woman with Bernese Mountain dog">
-                <h3>Oh My Dog</h3>
-                <p>This site is written by a pet blogger that just loves dogs. The articles are fun to read and the site
-                    includes some reviews as well, making it a one stop blog for dog owners around the country.
-                </p>
-                <a href="https://ohmydogblog.com/">Read More</a>
-            </article>
-            <article class="blog-card">
-                <img src="images/child_with_cat.webp" alt="child with a cat">
-                <h3>Pawsitively Pets</h3>
-                <p>A great fun site discussing everything you need to know about pets, including some exotic ones.
-                    Curated by a Veterinary Technician, the blog posts some informative articles even about pet health.
-                </p>
-                <a href="https://www.mypawsitivelypets.com/">Read More</a>
-            </article>
-            <article class="blog-card">
-                <img src="images/corgi.jpeg" alt="corgi running">
-                <h3>Pressplay Pets</h3>
-                <p>This blog has a great design that helps you to navigate around the site easily. Packed full of
-                    helpful information and real life stories about some amazing pets, this blog is the perfect sharing
-                    platform.
-                </p>
-                <a href="https://www.mypawsitivelypets.com/">Read More</a>
-            </article>
-        </section>
+        <div class="blog-cards-wrapper">
+            <section class="blog-cards-container">
+                <article class="blog-card">
+                    <img src="images/woman_with_bernese.jpeg" alt="woman with Bernese Mountain dog">
+                    <h3>Oh My Dog</h3>
+                    <p>This site is written by a pet blogger that just loves dogs. The articles are fun to read and the
+                        site
+                        includes some reviews as well, making it a one stop blog for dog owners around the country.
+                    </p>
+                    <a href="https://ohmydogblog.com/">Read More</a>
+                </article>
+                <article class="blog-card">
+                    <img src="images/child_with_cat.webp" alt="child with a cat">
+                    <h3>Pawsitively Pets</h3>
+                    <p>A great fun site discussing everything you need to know about pets, including some exotic ones.
+                        Curated by a Veterinary Technician, the blog posts some informative articles even about pet
+                        health.
+                    </p>
+                    <a href="https://www.mypawsitivelypets.com/">Read More</a>
+                </article>
+                <article class="blog-card">
+                    <img src="images/corgi.jpeg" alt="corgi running">
+                    <h3>Pressplay Pets</h3>
+                    <p>This blog has a great design that helps you to navigate around the site easily. Packed full of
+                        helpful information and real life stories about some amazing pets, this blog is the perfect
+                        sharing
+                        platform.
+                    </p>
+                    <a href="https://www.mypawsitivelypets.com/">Read More</a>
+                </article>
+                <article class="blog-card">
+                    <img src="images/cats_blog.jpeg" alt="cat">
+                    <h3>The Conscious Cat</h3>
+                    <p>Winner of the The Petties Dogtime's Pet Blog Award 2013 for Best Overall Pet Blog, the site
+                        focuses completely on cats, really understanding their needs and helping owners to locate the
+                        correct advice for their feline friends.
+                    </p>
+                    <a href="https://www.catster.com/info/conscious-cat-is-now-a-part-of-catster/">Read More</a>
+                </article>
+                <article class="blog-card">
+                    <img src="images/labs_white_choco.jpeg" alt="white and chocolate labrador puppies">
+                    <h3>The Dogington Post</h3>
+                    <p>A fantastic blog that is “the internet newspaper: all about dogs”. An excellent pet blog bringing
+                        up anything dog related in the news, including some features about health and lifestyle.
+                    </p>
+                    <a href="https://www.dogingtonpost.com/">Read More</a>
+                </article>
+                <article class="blog-card">
+                    <img src="images/dog_training.webp" alt="man training a dog">
+                    <h3>Peach On A Leash</h3>
+                    <p>From basic commands to advanced tricks, learn how to train your dog effectively with our
+                        step-by-step guide.
+                    </p>
+                    <a href="https://peachonaleash.com/blog/">Read More</a>
+                </article>
+            </section>
+        </div>
     </main>
+    <object>
+        <footer>
+            <iframe class="auto-height-iframe" src="partials/footer.html" width="100%"></iframe>
+        </footer>
+    </object>
 </body>
 
 </html>
