--- a/blog.html
+++ b/blog.html
@@ -16,15 +16,17 @@
     </object>
     <script src="javascript.js"></script>
     <main>
-        <section class="featured-blog">
-            <article class="blog-post">
-                <img src="images/dog_and_cat_blog.jpeg" alt="a woman with her pet">
-                <h2>Tips for a Happier, Healthier Pet</h2>
-                <p>Discover the secrets to boosting your pet's mood and well-being with our top tips.
-                </p>
-                <a href="https://blogpaws.com/">Read More</a>
-            </article>
-        </section>
+        <div class="content-container">
+            <section class="featured-blog">
+                <article class="blog-post">
+                    <img src="images/dog_and_cat_blog.jpeg" alt="a woman with her pet">
+                    <h2>Tips for a Happier, Healthier Pet</h2>
+                    <p>Discover the secrets to boosting your pet's mood and well-being with our top tips.
+                    </p>
+                    <a href="https://blogpaws.com/">Read More</a>
+                </article>
+            </section>
+        </div>
         <div class="blog-cards-wrapper">
             <section class="blog-cards-container">
                 <article class="blog-card">
