--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <section class="banner-container">
             <div class="banner-photo"></div>
             <div class="banner-text">
-                <h1>Bestsellers for your best friend!</h1>
-                <h2>Discover our most loved pet essentials:</h2>
+                <h1 class="banner-title">Bestsellers for your best friend!</h1>
+                <h2 class="banner-subtitle">Discover our most loved pet essentials:</h2>
                 <ul>
                     <li>Cozy beds</li>
                     <li>Chew toys</li>
